[PINOT-2905] Make Pinot Work with Travis
RB=702120
BUG=PINOT-2905
G=pinot-dev-reviewers
R=jfim,mshrivas,kgopalak,vradhakr,atumbde,raringun,ssubrama
A=atumbde