@@ -97,7 +97,7 @@
     <jackson.version>2.2.2</jackson.version>
     <async-http-client.version>1.9.21</async-http-client.version>
     <!-- Sets the VM argument line used when unit tests are run. -->
-    <argLine>-Xms10G -Xmx10G</argLine>
+    <argLine> -Xms4g -Xmx4g -XX:MaxPermSize=512m -XX:MaxDirectMemorySize=10g </argLine>
   </properties>
 
   <repositories>
@@ -160,7 +160,7 @@
         <groupId>com.linkedin.pinot</groupId>
         <artifactId>pinot-tools</artifactId>
         <version>${project.version}</version>
-      </dependency> 
+      </dependency>
       <dependency>
         <groupId>com.linkedin.pinot</groupId>
         <artifactId>pinot-hadoop</artifactId>
@@ -561,7 +561,7 @@
           <artifactId>maven-assembly-plugin</artifactId>
           <version>2.5.5</version>
         </plugin>
-        
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
@@ -625,7 +625,7 @@
             <forkCount>1</forkCount>
             <reuseForks>false</reuseForks>
             <!-- 30 minutes -->
-            <forkedProcessTimeoutInSeconds>3600</forkedProcessTimeoutInSeconds>
+            <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
           </configuration>
         </plugin>
         <plugin>
